use max 2 lines mixins in page nav to prevent text overflow

--- a/src/styles/page-nav.scss
+++ b/src/styles/page-nav.scss
@@ -65,7 +65,7 @@
 
   &__title-item {
     @include transition(color);
-    display: flex;
+    @include max-2-lines;
     justify-content: var(--title-item-justify-content);
     position: relative;
     text-align: var(--title-item-text-align);
